<resources>
    <string name="app_name">ForexLedger</string>

    <string name="facebook_application_id">369522001225679</string>
    <string name="facebook_app_id">369522001225679</string>

    <string name="nav_title_exchange_rate">匯率</string>
    <string name="nav_title_book">帳本</string>

    <string name="default_browsing_bank">預設查看銀行</string>
    <string name="logout">登出</string>
    <string name="unsupported_bank">不支援的銀行</string>
    <string name="create_book">建立帳本</string>
    <string name="book_name">帳本名稱</string>
    <string name="bank">銀行</string>
    <string name="currency_type">幣別</string>
    <string name="submit">提交</string>
    <string name="select_bank_first">請先選擇銀行</string>
    <string name="please_waiting">請稍後</string>
    <string name="current_value">現值</string>
    <string name="bank_buying_rate">銀行買匯</string>
    <string name="bank_selling_rate">銀行賣匯</string>
    <string name="profit">損益</string>
    <string name="break_even_point">損益平衡</string>
    <string name="last_invest">上次投入</string>
    <string name="create_transaction">建立交易</string>
    <string name="transaction_type">交易類型</string>
    <string name="transaction_date">交易日期</string>
    <string name="transaction_description">摘要</string>
    <string name="foreign_currency_amount">外幣金額</string>
    <string name="twd_amount">臺幣金額</string>
    <string name="also_create_entry_in_another_book">也登記到另一本帳簿</string>
    <string name="related_book_name">關聯帳簿名稱</string>
    <string name="related_foreign_currency_amount">關聯外幣金額</string>
    <string name="transfer_in">轉入</string>
    <string name="transfer_out">轉出</string>
    <string name="no_entry_description">(無說明)</string>
    <string name="transaction_records_of">的交易紀錄</string>

    <string name="symbol_twd">TWD</string>
    <string name="symbol_percentage">%</string>

    <string name="currency_usd">美金</string>
    <string name="currency_cny">人民幣</string>
    <string name="currency_jpy">日圓</string>
    <string name="currency_eur">歐元</string>
    <string name="currency_hkd">港幣</string>
    <string name="currency_aud">澳幣</string>
    <string name="currency_zar">南非幣</string>
    <string name="currency_cad">加拿大幣</string>
    <string name="currency_gbp">英鎊</string>
    <string name="currency_sgd">新加坡幣</string>
    <string name="currency_chf">瑞士法郎</string>
    <string name="currency_nzd">紐西蘭幣</string>
    <string name="currency_sek">瑞典幣</string>
    <string name="currency_thb">泰國銖</string>

    <string name="transaction_type_transfer_in_from_twd">從臺幣轉入</string>
    <string name="transaction_type_transfer_in_from_foreign">從外幣轉入</string>
    <string name="transaction_type_transfer_in_from_interest">利息收入</string>
    <string name="transaction_type_transfer_in_from_other">其他轉入</string>
    <string name="transaction_type_transfer_out_to_twd">轉出為臺幣</string>
    <string name="transaction_type_transfer_out_to_foreign">轉出為外幣</string>
    <string name="transaction_type_transfer_out_to_other">其他轉出</string>

    <string name="bank_fubon">富邦銀行</string>
    <string name="bank_richart">Richart</string>

    <string name="message_create_successfully">建立成功</string>
    <string name="error_should_not_be_empty">不可為空</string>
    <string name="error_should_be_positive">請輸入正數</string>
    <string name="error_should_select_one">請選擇一個</string>
    <string name="error_unsupported_bank_currency">銀行不支援此幣別</string>
    <string name="error_this_book_is_insufficient">本帳簿餘額不足</string>
    <string name="error_related_book_is_insufficient">關聯帳簿餘額不足</string>

</resources>