<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTransactionType"
            android:hint="@string/transaction_type"
            style="@style/TextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTransactionType"
                style="@style/DropdownEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTransactionDate"
            android:hint="@string/transaction_date"
            style="@style/TextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputTransactionType">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTransactionDate"
                style="@style/EditText"
                android:editable="false"
                android:clickable="true"
                android:focusable="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputForeignAmount"
            android:hint="@string/foreign_currency_amount"
            style="@style/TextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputTransactionDate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editForeignAmount"
                style="@style/EditText"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTwdAmount"
            android:hint="@string/twd_amount"
            style="@style/TextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputForeignAmount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTwdAmount"
                style="@style/EditText"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkSyncToAnotherBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/also_create_entry_in_another_book"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputTwdAmount"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputBookName"
            android:hint="@string/book_name"
            style="@style/TextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkSyncToAnotherBook">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editBookName"
                style="@style/DropdownEditText" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>